- implement p4a_table::addCheckboxCol
- implement errors with exceptions and tie them to p4a_error_handler
- db navigator movements (wait for jQuery UI 1.5)
- do some strict validation
- file preview or whatever should raise some visible errors when file does not exists
- if db-source is filtered, on new row use filter value as default value 
- p4a_sheet::anchor must work with strings, create p4a_sheet::setFree
- check postgresql serial

2.99.3
- P4A_Toolbars code was refactored using P4A chainability
- a bug with P4A_Full_Toolbar and P4A_Simple_Toolbar about delete was solved
- a bug with P4A_DB_Source::deleteRow was solved
- P4A_Widget::requireConfirmation() now trigger an error if addAction wasn't called before
- P4A_Exception class was added
- P4A_Exception_Handler now replaces PHP's default exception handler
- a part of P4A_DB_Source error management was ported to the new error handlers
- Zend Framework was updated to 1.0.4
- P4A_DB_Source::load() now returns $this thus is chainable now
- P4A_DB_Source::_composeSelectCountQuery() now always encapsulate the complete select query (without order clause) in a second count query
- translations were synched with launchpad
- P4A_DB::query() method was added
- P4A_Mask error management was ported to exceptions
- p4a/libraries/standard.php was renamed p4a/functions.php
- P4A_DB_Select class was removed 'cause unused
- code reference was organized in packages
- P4A_Sheet was ported to the new error handling
- P4A_Mask::setFocus() method now checks if the passed object is an instance of P4A_Object, otherwise does nothing
- P4A::getFocusedObjectId() method now checks if the "active_mask" object exists, otherwise returns null

2.99.2
- P4A_Mask::main() method is now called also within an AJAX call, if a full redesign is required
- a bug with search function within products_catalogue sample was fixed
- more chainability was added to the P4A main class
- a bug with P4A_DB_Source::createDataField() method was solved