@@ -7,7 +7,6 @@
 - do some strict validation
 - file preview or whatever should raise some visible errors when file does not exists
 - if db-source is filtered, on new row use filter value as default value 
-- p4a_sheet::anchor must work with strings, create p4a_sheet::setFree
 - check postgresql serial
 
 2.99.3
@@ -30,6 +29,8 @@
 - P4A_Sheet was ported to the new error handling
 - P4A_Mask::setFocus() method now checks if the passed object is an instance of P4A_Object, otherwise does nothing
 - P4A::getFocusedObjectId() method now checks if the "active_mask" object exists, otherwise returns null
+- P4A_Sheet::anchor() method now supports text strings and not only widgets
+- P4A_Sheet::setFree() method was added
 
 2.99.2
 - P4A_Mask::main() method is now called also within an AJAX call, if a full redesign is required
